<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ProfileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ProfilePictureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainColor"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/profilicon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/amaticsc_bold"
                android:text="@string/profile"
                android:textColor="@android:color/background_light"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:contentDescription="@string/icon_description"
                android:src="@drawable/ic_action_person"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/profilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            app:actualImageScaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderImage="@drawable/empty_profile_pic"
            app:roundedCornerRadius="50dp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:columnCount="2"
            android:useDefaultMargins="true"
            app:layout_constraintTop_toBottomOf="@+id/ProfilePictureLayout">

            <TextView
                android:id="@+id/displayNameLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/displayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muster_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muster_email"
                android:textSize="18sp" />
        </GridLayout>

        <android.widget.Button
            android:id="@+id/clearEventHistory"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            android:background="@color/grey"
            android:clickable="true"
            android:drawableStart="@drawable/ic_baseline_refresh_24"
            android:fontFamily="@font/amaticsc_bold"
            android:foreground="?attr/selectableItemBackground"
            android:paddingHorizontal="16dp"
            android:text="@string/action_clear_event_history"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <android.widget.Button
            android:id="@+id/tutorial"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            android:background="@color/grey"
            android:clickable="true"
            android:fontFamily="@font/amaticsc_bold"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/action_show_tutorial"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <android.widget.Button
            android:id="@+id/logout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="32dp"
            android:background="@color/grey"
            android:clickable="true"
            android:fontFamily="@font/amaticsc_bold"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/action_sign_out_short"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>